Address Phase 6 stakeholder feedback
- Add CLI integration: --max-concurrent-files option in CommandSpecifications
- Replace magic numbers with named constants (code-quality)
- Fix underutilized line formatting (style)
- Fix obvious comment statement (style)
- Document preview API restriction in out-of-scope.md

All stakeholder reviews now approved:
- technical-architect: ✅ APPROVED
- security-auditor: ✅ APPROVED
- code-quality-auditor: ✅ APPROVED
- style-auditor: ✅ APPROVED
- test-coverage: ✅ APPROVED
- performance-analyzer: ✅ APPROVED
- code-tester: ✅ APPROVED

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>